# ray_tracing

./: CMakeLists.txt  README.md
images/: 1-sky.ppm  10-gamma-correction.ppm  11-materials.ppm  12-fuzz.ppm  13-dielectrics.ppm  14-hollow-glass-sphere.ppm  15-camera-angle.ppm  16-adjust-camera.ppm  17-back-to-original-scene.ppm  18-defocus-blur.ppm  2-sphere.ppm  6-diffuse-sphere.ppm  7-better-diffuse-sphere.ppm  8-fixed-shadows-diffuse-sphere.ppm  9-lamvertian-reflection.ppm
src/: main  main.cpp
src/classes/: camera.h  color.h  hittable-list.h  hittable.h  interval.h  material.h  ray.h  sphere.h  utils.h  vec3.h
